# chezmoi

./: .env.deploy  .env.local  .gitignore  Cargo.toml  README.md  dot_Xmodmap  dot_gitconfig  dot_zshrc  justfile
.github/workflows/: release.yml
crates/ai_service/: Cargo.toml
crates/ai_service/src/: main.rs
crates/auth_middleware/: Cargo.toml
crates/auth_middleware/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: api.rs  cli.rs  commands.rs  config.rs  main.rs  output.rs  ui.rs  util.rs
crates/db_migrations/: Cargo.toml
crates/db_migrations/migrations/: 001_create_users.sql  002_add_users_api_key.sql
crates/db_migrations/src/: lib.rs
crates/http_utils/: Cargo.toml
crates/http_utils/src/: lib.rs
crates/jwt_validation/: Cargo.toml
crates/jwt_validation/src/: lib.rs
crates/service/ai/: Cargo.toml
crates/service/ai/src/: main.rs
crates/service/ai/src/handlers/: ai.rs  health.rs  mod.rs  writer.rs
crates/service/user/: Cargo.toml
crates/service/user/src/: main.rs
crates/service/user/src/handlers/: auth.rs  change_password.rs  login.rs  mod.rs  register.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/user_service/: Cargo.toml
crates/user_service/src/: main.rs
private_dot_config/alacritty/: alacritty.toml
private_dot_config/i3/: config
private_dot_config/i3status/: config
private_dot_config/nvim/: README.md.tmpl  dot_gitignore.tmpl  init.lua  init.lua.tmpl  lazy-lock.json  lazy-lock.json.tmpl
private_dot_config/nvim/ftplugin/: gotmpl.lua.tmpl  gowork.lua.tmpl
private_dot_config/startship/: starship.toml
private_dot_config/tmux/: tmux.conf
private_dot_config/tmux/layouts/: executable_code_window.window.sh  executable_opus_cealum.session.sh  executable_snc_control_pannel.session.sh  executable_snc_megahub.session.sh  executable_snc_megahub.window.sh  executable_snc_pocket-assistant.session.sh  (+1 more)
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
(+40 files in other folders)
