[package]
name = "ai_service"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "1.0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

jwt_validation = { path = "../jwt_validation" }

[package.metadata.lambda.deploy]
timeout = 15
memory = 256
